examples/test/testpolicy1028.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1028
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key35: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value37
          key38: value2
          key49: value13
      podSelector:
        matchLabels:
          key49: value29
          key10: value20
